--- a/style.css
+++ b/style.css
@@ -50,6 +50,23 @@
       .section5cardItems {
             width: 100% !important;
       }
+
+
+      .footerItems {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            gap: 20px;
+      }
+
+      .section1-container {
+            height: 800px !important;
+      }
+
+      .section1-container h1, h3 {
+            text-align: left;
+      }
  }    
 
  @media (min-width: 768px) {
@@ -57,9 +74,28 @@
             padding: 120px 40px;
       }
 
+
+
       
  }
 
+ @media (max-width: 768px) {
+      .section5Text {
+            align-items: center;
+            justify-content: center;
+      }
+ }
+
+
+ @media (max-width: 900px) {
+      .section5-items {
+            flex-direction: column;
+      }
+ }
+
+.section5-items {
+      gap: 50px;
+}
 
 
 
@@ -88,3 +124,24 @@
       justify-content: center;
       align-items: center;
  }
+
+
+.footerLinks {
+      text-align: right;
+}
+
+footer {
+      padding: 48px 40px;
+}
+
+footer img {
+      width: 20px;
+      height: 18px;
+      cursor: pointer;
+}
+
+.footerLinks {
+      cursor: pointer;
+}
+
+    
